<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewStudent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="#eee"
        android:elevation="2dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <Button
            android:id="@+id/okbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="OK"
            android:onClick="clickedOKCallback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <ImageView
            android:id="@+id/studentImage"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:contentDescription="@string/user_profile_image"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@null" />

        <TextView
            android:id="@+id/Studentemail"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:maxLines="1"
            android:text="@string/username_text"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/studentImage" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:maxLines="1"
            android:text="@string/username"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/usernameValue" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:maxLines="1"
            android:text="@string/phone_num_"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/phoneValue" />

        <TextView
            android:id="@+id/Level"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:ems="10"
            android:maxLines="1"
            android:text="@string/level_text"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner" />

        <TextView
            android:id="@+id/emailValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Studentemail"
            app:layout_constraintTop_toBottomOf="@+id/studentImage" />

        <TextView
            android:id="@+id/usernameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userName"
            app:layout_constraintTop_toBottomOf="@+id/emailValue" />

        <TextView
            android:id="@+id/phoneValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text=""
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/usernameValue" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="177dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Level"
            app:layout_constraintTop_toBottomOf="@+id/phoneValue"
            android:entries="@array/spinnerItems"/>

    </android.support.constraint.ConstraintLayout>
    <Button
        android:id="@+id/monitorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start monitoring"
        android:onClick="monitorCallback"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        />


</android.support.constraint.ConstraintLayout>
